--- a/templates/index.html
+++ b/templates/index.html
@@ -17,16 +17,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/aos/aos.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/bootstrap/css/bootstrap.min.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/bootstrap-icons/bootstrap-icons.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/boxicons/css/boxicons.min.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/glightbox/css/glightbox.min.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/remixicon/remixicon.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/swiper/swiper-bundle.min.css") }}  rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/css/style.css") }}  rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Bootslander - v4.9.1
@@ -90,13 +90,29 @@
           <div data-aos="zoom-out">
             <h1>Build Your Landing Page With <span>Bootstlander</span></h1>
             <h2>We are team of talented designers making websites with Bootstrap</h2>
+            
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto">Get Started</a>
+              <div class="row">
+                <div class="col-md-8 offset-md-1">
+                  <form method="post" action={{ url_for('result') }} enctype="multipart/form-data">
+                    <h3 class="text-center" style="color:white !important;">Upload Blood Cell Image</h3>
+                    <div class="row" style="padding: 40px;">
+                      <input type="file" name="file1" class="form-control">
+                    </div>
+      
+                    <div class="row" style="padding:0 90px 40px 90px;">
+                      <input type="submit" value="Proceed" class="btn btn-danger">
+                    </div>
+                      
+                    
+                  </form>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
-          <img src="https://img.lovepik.com/free_png/32/43/87/58e58PIC22986XN6djeJ2_PIC2018.png_860.png" class="img-fluid animated" alt="">
+          <img src={{ url_for('static', filename="assets/img/banner.png") }} class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -124,21 +140,7 @@
     <section id="about" class="about">
       <div class="container-fluid">
 
-        <div class="row">
-          <div class="col-md-4 offset-md-4">
-            <form>
-              <h3 class="text-center">Upload Blood Cell Image</h3>
-              <div class="row" style="padding: 40px;">
-                <input type="file" name="file" class="form-control">
-              </div>
-
-              <div class="row" style="padding:0 40px 40px 40px;">
-                <input type="submit" value="Proceed" class="btn btn-danger">
-              </div>
-                
-              
-            </form>
-          </div>
+        
 
       </div>
     </section><!-- End About Section -->
@@ -166,15 +168,15 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src={{ url_for('static', filename="assets/vendor/purecounter/purecounter_vanilla.js") }} ></script>
+  <script src={{ url_for('static', filename="assets/vendor/aos/aos.js") }} ></script>
+  <script src={{ url_for('static', filename="assets/vendor/bootstrap/js/bootstrap.bundle.min.js") }} ></script>
+  <script src={{ url_for('static', filename="assets/vendor/glightbox/js/glightbox.min.js") }} ></script>
+  <script src={{ url_for('static', filename="assets/vendor/swiper/swiper-bundle.min.js") }} ></script>
+  <script src={{ url_for('static', filename="assets/vendor/php-email-form/validate.js") }} ></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src={{ url_for('static', filename="assets/js/main.js") }} ></script>
 
 </body>
 
