--- a/templates/result.html
+++ b/templates/result.html
@@ -10,23 +10,23 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href={{ url_for('static', filename="assets/img/favicon.png") }}  rel="icon">
+  <link href={{ url_for('static', filename="assets/img/apple-touch-icon.png") }}  rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/aos/aos.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/bootstrap/css/bootstrap.min.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/bootstrap-icons/bootstrap-icons.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/boxicons/css/boxicons.min.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/glightbox/css/glightbox.min.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/remixicon/remixicon.css") }}  rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/vendor/swiper/swiper-bundle.min.css") }}  rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href={{ url_for('static', filename="assets/css/style.css") }}  rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Bootslander - v4.9.1
@@ -43,7 +43,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><span>WBC Detection</span></a></h1>
+        <h1><a href={{ url_for('index') }}><span>WBC Detection</span></a></h1>
        
       </div>
 
@@ -61,7 +61,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Results</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href={{ url_for('index') }}>Home</a></li>
             <li>Results</li>
           </ol>
         </div>
@@ -73,10 +73,18 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 offset-md-2">
-            <img src="assets/img/details-1.png" alt="" width="100%" class="img-responsive">
+            <img src={{ url_for('static', filename= 'upload/') }}{{ filep }}   alt="Cant load img" width="100%" class="img-responsive">
           </div>
           <div class="col-md-5">
-            Result here
+            {% if res==0 %}  
+            <h2 style="margin-top:15%;">EOSINOPHIL</h2>
+            {% elif res==1 %}  
+            <h2 style="margin-top:15%;">LYMPHOCYTE</h2>
+            {% elif res==2 %}  
+            <h2 style="margin-top:15%;">MONOCYTE</h2>
+            {% elif res==3 %}  
+            <h2 style="margin-top:15%;">NEUTROPHIL</h2>
+            {% endif %}  
           </div>
         </div>
       </div>
@@ -85,10 +93,10 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <!--<footer id="footer">
     
 
-    <!-- <div class="container">
+    div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>Bootslander</span></strong>. All Rights Reserved
       </div>
@@ -96,22 +104,23 @@
        
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
-    </div> -->
-  </footer><!-- End Footer -->
+    </div>
+  </footer>-->
+  <!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src={{ url_for('static', filename="assets/vendor/purecounter/purecounter_vanilla.js") }}  ></script>
+  <script src={{ url_for('static', filename="assets/vendor/aos/aos.js") }}  ></script>
+  <script src={{ url_for('static', filename="assets/vendor/bootstrap/js/bootstrap.bundle.min.js") }}  ></script>
+  <script src={{ url_for('static', filename="assets/vendor/glightbox/js/glightbox.min.js") }}  ></script>
+  <script src={{ url_for('static', filename="assets/vendor/swiper/swiper-bundle.min.js") }}  ></script>
+  <script src={{ url_for('static', filename="assets/vendor/php-email-form/validate.js") }}  ></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src={{ url_for('static', filename="assets/js/main.js") }}  ></script>
 
 </body>
 
